--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -60,6 +60,7 @@
     <uses-permission android:name="android.permission.MANAGE_APP_TOKENS" />
     <uses-permission android:name="android.permission.SET_ORIENTATION" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.ACCESS_SURFACE_FLINGER" />
 
     <!-- DreamManager -->
     <uses-permission android:name="android.permission.READ_DREAM_STATE" />
@@ -70,6 +71,23 @@
 
     <!-- Keyguard -->
     <uses-permission android:name="android.permission.CONTROL_KEYGUARD" />
+
+    <!-- PhoneWindowManager -->
+    <protected-broadcast android:name="android.permission.SCREENSHOT" />
+    <protected-broadcast android:name="android.intent.action.SCREENSHOT" />
+ 
+    <permission android:name="android.permission.SCREENSHOT"
+                android:protectionLevel="signatureOrSystem"
+                android:description="@string/screenshot_permission_prompt"
+                android:label="@string/screenshot_permission_title" />
+
+    <protected-broadcast android:name="android.permission.SCREENRECORD" />
+    <protected-broadcast android:name="android.intent.action.SCREENRECORD" />
+ 
+    <permission android:name="android.permission.SCREENRECORD"
+                android:protectionLevel="signatureOrSystem"
+                android:description="@string/screenrecord_permission_prompt"
+                android:label="@string/screenrecord_permission_title" />
 
     <application
         android:persistent="true"
@@ -89,14 +107,27 @@
             android:exported="true"
             />
 
-        <!-- started from PhoneWindowManager
-             TODO: Should have an android:permission attribute -->
+        <!-- started from PhoneWindowManager -->
         <service android:name=".screenshot.TakeScreenshotService"
             android:process=":screenshot"
-            android:exported="false" />
+            android:permission="android.permission.SCREENSHOT"
+            android:exported="false">
+            <intent-filter>
+                <android name="android.intent.action.SCREENSHOT"/>
+            </intent-filter>
+        </service>
 
         <receiver android:name=".screenshot.DeleteScreenshot"
                 android:exported="true" />
+
+        <service android:name=".screenrecord.TakeScreenRecordService"
+            android:process=":screenrecord"
+            android:permission="android.permission.SCREENRECORD"
+            android:exported="false">
+            <intent-filter>
+                <android name="android.intent.action.SCREENRECORD"/>
+            </intent-filter>
+        </service>
 
         <service android:name=".LoadAverageService"
                 android:exported="true" />
