--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -125,6 +125,16 @@
         <service android:name=".LoadAverageService"
                 android:exported="true" />
 
+        <!-- battery saver mode -->
+        <service android:name=".batterysaver.BatterySaverService" />
+
+        <receiver android:name=".batterysaver.AirPlaneChangeMode"
+                android:exported="true" />
+
+        <receiver android:name=".batterysaver.DisableBatterySaverMode"
+                android:exported="true" />
+        <!-- battery saver mode -->
+
         <service android:name=".ImageWallpaper"
                 android:permission="android.permission.BIND_WALLPAPER"
                 android:exported="true" />
